--- a/树/基本定义.md
+++ b/树/基本定义.md
@@ -1,14 +1,14 @@
-- [结点定义](#结点定义)
-- [前序遍历](#前序遍历)
-  - [递归](#递归)
-  - [迭代](#迭代)
-  - [Morris 遍历](#morris-遍历)
-- [前、中、后](#前中后)
-- [后续遍历](#后续遍历)
+- [1. 结点定义](#1-结点定义)
+- [2. 前序遍历](#2-前序遍历)
+  - [2.1. 递归](#21-递归)
+  - [2.2. 迭代](#22-迭代)
+  - [2.3. Morris 遍历](#23-morris-遍历)
+- [3. 前、中、后](#3-前中后)
+- [4. 后序遍历](#4-后序遍历)
 
 ---
 
-# 结点定义
+# 1. 结点定义
 ```cpp
 struct TreeNode {
     int val;
@@ -20,9 +20,9 @@ struct TreeNode {
 };
 ```
 
-# 前序遍历
+# 2. 前序遍历
 
-## 递归
+## 2.1. 递归
 
 ```
 示例 1：
@@ -65,7 +65,7 @@ public:
 空间复杂度：O(n)，为递归过程中栈的开销，平均情况下为 $O(\log n)$，最坏情况下树呈现链状，为 O(n)。
 
 
-## 迭代
+## 2.2. 迭代
 
 ```cpp
 class Solution {
@@ -144,11 +144,11 @@ public:
 };
 ```
 
-## Morris 遍历
+## 2.3. Morris 遍历
 
 [没学](https://leetcode.cn/problems/binary-tree-preorder-traversal/solution/er-cha-shu-de-qian-xu-bian-li-by-leetcode-solution/)
 
-# 前、中、后
+# 3. 前、中、后
 
 递归：永远是先左后右，根据前中后调整根的位置
 - 前：根、左、右
@@ -160,7 +160,7 @@ public:
 - 中：出栈时（根）
 - 后：右子树时+特殊结构
 
-# 后续遍历
+# 4. 后序遍历
 
 ```cpp
 class Solution {
