--- a/链表/单链表.md
+++ b/链表/单链表.md
@@ -22,7 +22,7 @@ while(cur != nullptr){
 // cur = nullptr，最后一个结点的下一个，是空。
 ```
 
-但不要为了让cur最后指向最后的结点，而让while变得特别麻烦，这样很容易忘了第一个条件而出错。`while(cur->next != nullptr)`，传入空链的情况下，空结点怎么可能有next。
+但不要为了让cur最后指向最后的结点，而让while变得特别麻烦，这样很容易忘了第一个条件而出错，即`while(cur->next != nullptr)`，若传入空链的情况下，空结点怎么可能有next。
 
 ```cpp
 while(cur != nullptr && cur->next != nullptr){
