--- a/docs/树/二叉树的最大深度.md
+++ b/docs/树/二叉树的最大深度.md
@@ -27,4 +27,4 @@ public:
 };
 ```
 如果我们知道了左子树和右子树的最大深度 ll 和 rr，那么该二叉树的最大深度即为
-![picture 2](/image/282c5251481453ee8dd08c0e50acbae132587d7f7a53a5bd798994eb8a22ee27.png)  
+![picture 2](../../images/282c5251481453ee8dd08c0e50acbae132587d7f7a53a5bd798994eb8a22ee27.png)  
