--- a/docs/树/层序遍历.md
+++ b/docs/树/层序遍历.md
@@ -10,15 +10,15 @@
 
 层序遍历顺序和 BFS 是一样的，我们可以直接用 BFS 得出层序遍历结果。然而，层序遍历要求的输入结果和 BFS 是不同的。层序遍历要求我们区分每一层，也就是返回一个二维数组。而 BFS 的遍历结果是一个一维数组，无法区分每一层。
 
-![picture 3](/image/b7f6f8081cc15486a58183a2d1dd5572b795c17d2fd98ed3d884a915981b8d18.png)  
+![picture 3](../../images/b7f6f8081cc15486a58183a2d1dd5572b795c17d2fd98ed3d884a915981b8d18.png)  
 
 那么，怎么给 BFS 遍历的结果分层呢？我们首先来观察一下 BFS 遍历的过程中，结点进队列和出队列的过程：
 
-![4529bf559c6a2d84d550eebaee027c3b7ae25069e4ec91f27b29a4c6358d6662](/image/4529bf559c6a2d84d550eebaee027c3b7ae25069e4ec91f27b29a4c6358d6662.gif)
+![4529bf559c6a2d84d550eebaee027c3b7ae25069e4ec91f27b29a4c6358d6662](../../images/4529bf559c6a2d84d550eebaee027c3b7ae25069e4ec91f27b29a4c6358d6662.gif)
 
 截取 BFS 遍历过程中的某个时刻：
 
-![picture 5](/image/ec82afd61d795e414ed77369d6026ce18eaa389d0e9cea9f9dedeec4d4ec2206.png)  
+![picture 5](../../images/ec82afd61d795e414ed77369d6026ce18eaa389d0e9cea9f9dedeec4d4ec2206.png)  
 
 可以看到，此时队列中的结点是 3、4、5，分别来自第 1 层和第 2 层。这个时候，第 1 层的结点还没出完，第 2 层的结点就进来了，而且两层的结点在队列中紧挨在一起，我们无法区分队列中的结点来自哪一层。
 
@@ -26,7 +26,7 @@
 
 这样，我们就将 BFS 遍历改造成了层序遍历。可以看到，在 while 循环的每一轮中，都是将当前层的所有结点出队列，再将下一层的所有结点入队列，这样就实现了层序遍历。
 
-![94cd1fa999df0276f1dae77a9cca83f4cabda9e2e0b8571cd9550a8ee3545f56](/image/94cd1fa999df0276f1dae77a9cca83f4cabda9e2e0b8571cd9550a8ee3545f56.gif)
+![94cd1fa999df0276f1dae77a9cca83f4cabda9e2e0b8571cd9550a8ee3545f56](../../images/94cd1fa999df0276f1dae77a9cca83f4cabda9e2e0b8571cd9550a8ee3545f56.gif)
 
 
 # 2. version
