--- a/docs/题/101.对称二叉树.md
+++ b/docs/题/101.对称二叉树.md
@@ -3,7 +3,7 @@
  
 > 示例 1：
 
-![picture 4](/image/8fa4661d198d204b9b5a2699c56720d14c26ccd93b596fa8a107a8a7d77f5787.png)  
+![picture 4](../../images/8fa4661d198d204b9b5a2699c56720d14c26ccd93b596fa8a107a8a7d77f5787.png)  
 
 输入：root = [1,2,2,3,4,4,3]
 输出：true
@@ -13,7 +13,7 @@
 输入：root = [1,2,2,null,3,null,3]
 输出：false
  
-![picture 5](/image/3858dffca2896bd7774068087582da38f0b5e185a56189a10aea4a38b92fe9c6.png)  
+![picture 5](../../images/3858dffca2896bd7774068087582da38f0b5e185a56189a10aea4a38b92fe9c6.png)  
 
 提示：
 
