--- a/docs/树/基本定义.md
+++ b/docs/树/基本定义.md
@@ -210,7 +210,7 @@ public:
 - 重新入栈：
   右孩子不为空时，且右子树没被走过。
   已经pop弹出的结点3，会重新入栈。
-  ![re-stack](../../images/re-stack.PNG)
+  ![re-stack](../../images/re-stack.png)
 
 - 标记更新：
   - 右孩子为空直接输出的情况
