--- a/docs/其他.md
+++ b/docs/其他.md
@@ -1,13 +1,27 @@
-```java
-// 第一处只能有一个表达式，第三处可以有多个表达式
-int j = 0;  // 只能定义在外面了
-for(int i = 0; i < length; i++, j++)
-```
-
 ```
 String a = String.format("%d", 12);     // 12
 ```
+## contain 是否存在
 
+contain + getIndex，而不是直接 return true/false.
+```java
+//判断id在集合中是否存在
+public static boolean contains(ArrayList<Student> list, String id) {
+    return getIndex(list,id) >= 0;
+}
+
+//通过id获取索引的方法
+public static int getIndex(ArrayList<Student> list, String id){
+    for (int i = 0; i < list.size(); i++) {
+        Student stu = list.get(i);
+        String sid = stu.getId();
+        if(sid.equals(id)){
+            return i;
+        }
+    }
+    return -1;
+}
+```
 ```
     @Override
     public Iterator<Integer> iterator() {
