--- a/docs/数组.md
+++ b/docs/数组.md
@@ -1,32 +1,9 @@
-![alt text](../images/image-26.png)
+- [1. 局部性原理](#1-局部性原理)
+- [2. 实现动态数组](#2-实现动态数组)
+- [3. 二维数组](#3-二维数组)
 
-![alt text](../images/image-27.png)
-- 数组引用的数组：32 个字节，其中 array[0]，array[1]，array[2] 三个元素分别保存了指向三个一维数组的引用
-- 三个实际元素的数组各占 40 个字节
-- 它们在内层布局上是**连续**的
-
-
-
-> 已知 array **对象**起始地址是 0x1000，那么 23 这个元素的地址是什么？
->
-> ```java
-> byte[][] array = {
->     {11, 12, 13, 14, 15},
->     {21, 22, 23, 24, 25},
->     {31, 32, 33, 34, 35},
-> };
-> ```
-> 
->  答：
-> * 起始地址 0x1000
-> * 外层数组大小：16字节对象头 + 3元素 * 每个引用4字节 + 4 对齐字节 = 32 = 0x20
-> * 第一个内层数组大小：16字节对象头 + 5元素 * 每个byte1字节 + 3 对齐字节 = 24 = > 0x18
-> * 第二个内层数组，16字节对象头 = 0x10，待查找元素索引为 2
-> * 最后结果 = 0x1000 + 0x20 + 0x18 + 0x10 + 2*1 = 0x104a
-
-
-
-### 4) 局部性原理
+---
+## 1. 局部性原理
 
 
 ```java
@@ -65,7 +42,7 @@ Java实现好的动态数组就是ArrayList。
 
 `Arrays.copyOfRange`的to，包含吗？
 
-## 实现动态数组
+## 2. 实现动态数组
 ```java
 import java.util.Arrays;
 import java.util.Iterator;
@@ -214,5 +191,5 @@ O(1)
 
 尾部位置，时间复杂度是 $O(1)$（扩容很罕见，均摊来说）
 
-## 二维数组
+## 3. 二维数组
 
