--- a/docs/时间复杂度.md
+++ b/docs/时间复杂度.md
@@ -1,4 +1,11 @@
-## 2. 大O表示法
+- [1. 大O表示法](#1-大o表示法)
+- [递归复杂度 Master theorem](#递归复杂度-master-theorem)
+- [2. contain 是否存在](#2-contain-是否存在)
+- [3. test](#3-test)
+
+
+---
+## 1. 大O表示法
 
 - 渐进上界：代表算法执行的最差情况
 - 渐进下界 $\Omega(g(n))$：代表算法执行的最佳情况
@@ -29,7 +36,89 @@
 ```
 String a = String.format("%d", 12);     // 12
 ```
-## contain 是否存在
+
+## 递归复杂度 Master theorem
+
+> x不等于c时，T(n) = $O(n^{max(x,c)})$；相等时，T(n) = $O(n^c \log n)$
+
+若有递归式
+$$
+T(n) = aT(\frac{n}{b}) + O(n^c)
+$$
+其中
+
+* $T(n)$ 是问题的运行时间，$n$ 是数据规模
+* $a$ 是子问题个数
+* $T(\dfrac{n}{b})$ 是子问题运行时间，每个子问题被拆成原问题数据规模的 $\dfrac{n}{b}$
+* $O(n^c)$ 是除递归外执行的计算
+
+令 $x = \log_{b}{a}$，即 $x = \log_{子问题缩小倍数}{子问题个数}$
+
+那么
+$$
+T(n) = 
+\begin{cases}
+\Theta(n^x) & f(n) = O(n^c) 并且 c \lt x\\
+\Theta(n^x\log{n}) & f(n) = \Theta(n^x)\\
+\Theta(n^c) & f(n) = \Omega(n^c) 并且 c \gt x
+\end{cases}
+$$
+
+
+
+**例1**
+
+$T(n) = 2T(\frac{n}{2}) + n^4$ 
+
+* 此时 $x = 1 < 4$，由后者决定整个时间复杂度 $\Theta(n^4)$
+
+
+**例2**
+
+$T(n) = T(\frac{7n}{10}) + n$
+
+* $a=1, b=\frac{10}{7}, x=0, c=1$
+* 此时 $x = 0 < 1$，由后者决定整个时间复杂度 $\Theta(n)$
+
+
+
+**例3**
+
+$T(n) = 16T(\frac{n}{4}) + n^2$
+
+* $a=16, b=4, x=2, c=2$
+* 此时 $x=2 = c$，时间复杂度 $\Theta(n^2 \log{n})$
+
+
+
+**例4**
+
+$T(n)=7T(\frac{n}{3}) + n^2$
+
+* $a=7, b=3, x=1.?, c=2$
+* 此时 $x = \log_{3}{7} < 2$，由后者决定整个时间复杂度 $\Theta(n^2)$
+
+
+
+**例5**
+
+$T(n) = 7T(\frac{n}{2}) + n^2$
+
+* $a=7, b=2, x=2.?, c=2$
+* 此时 $x = log_2{7} > 2$，由前者决定整个时间复杂度 $\Theta(n^{\log_2{7}})$
+
+
+
+**例6**
+
+$T(n) = 2T(\frac{n}{4}) + \sqrt{n}$
+
+* $a=2, b=4, x = 0.5, c=0.5$
+* 此时 $x = 0.5 = c$，时间复杂度 $\Theta(\sqrt{n}\ \log{n})$
+
+
+
+## 2. contain 是否存在
 
 contain + getIndex，而不是直接 return true/false.
 ```java
@@ -51,7 +140,7 @@ public static int getIndex(ArrayList<Student> list, String id){
 }
 ```
 
-## test
+## 3. test
 
 ```java
 assertIterableEquals(List.of(4, 3, 2, 1), list);
