--- a/src/main/java/com/itheima/algorithm/recursion/递归.md
+++ b/src/main/java/com/itheima/algorithm/recursion/递归.md
@@ -6,6 +6,7 @@
   - [斐波那契数列](#斐波那契数列)
     - [兔子](#兔子)
     - [爬楼梯](#爬楼梯)
+- [汉诺塔](#汉诺塔)
 
 ---
 ## 1. 前后位置
@@ -165,3 +166,13 @@ $$
 按跳1个和跳2个到第4台阶算→2阶、3阶。
 
 因此本质上还是斐波那契数列，只是从其第二项开始f(2)
+
+
+## 汉诺塔
+
+![alt text](../../../../../../../images/image-29.png)
+
+以最后一个盘子为分界：
+- 把 n-1 个盘子，由a,借c,移至b
+- 把最后的盘子， 由a,借b,移至 c
+- 把 n-1 个盘子，由b,借a,移至c
