--- a/src/main/java/com/itheima/algorithm/recursion/递归.md
+++ b/src/main/java/com/itheima/algorithm/recursion/递归.md
@@ -2,11 +2,19 @@
 - [2. 传递不变的参数](#2-传递不变的参数)
 - [3. 返回值](#3-返回值)
 - [4. 循环变递归](#4-循环变递归)
-- [题](#题)
-  - [斐波那契数列](#斐波那契数列)
-    - [兔子](#兔子)
-    - [爬楼梯](#爬楼梯)
-- [汉诺塔](#汉诺塔)
+- [5. 记忆数组](#5-记忆数组)
+- [6. 题](#6-题)
+  - [6.1. 斐波那契数列](#61-斐波那契数列)
+    - [6.1.1. 兔子](#611-兔子)
+    - [6.1.2. 爬楼梯](#612-爬楼梯)
+  - [6.2. 汉诺塔](#62-汉诺塔)
+  - [6.3. 杨辉三角](#63-杨辉三角)
+
+---
+
+1. 斐波那契数列的第一项元素是多少，第二项元素是多少？
+2. 爬楼梯是从斐波那契数列的第几项作为开始？
+3. 汉诺塔的递归规则是什么？用到了几次递归？
 
 ---
 ## 1. 前后位置
@@ -123,9 +131,75 @@ int f(...) {
 - `recursion(..., i, j)` -> `recursion(..., i + 1, j - 1)`
 
 
-## 题
+## 5. 记忆数组
+两种方式：一种在递归外面填充边界条件，另一种在递归内作为边界条件填充数组。
 
-### 斐波那契数列
+记忆数组的递归不用特别调用，正常就行。
+```java
+/**
+    * <h3>使用 Memoization(记忆法, 也称备忘录) 改进</h3>
+    */
+public static int fibonacciRecursion1(int n) {
+    // 预先定义一个数组
+    int[] cache = new int[n + 1];
+    // 填充-1是为了记忆数组作为已填充的退出条件
+    Arrays.fill(cache, -1); // [-1,-1,-1,-1,-1,-1]
+    // 边界条件写到数组里，初始化前两个数
+    cache[0] = 0;
+    cache[1] = 1;
+    return f(n, cache);
+}
+
+/*
+    * 用递归填满记忆数组: 初始化前两个数
+    */
+private static int f(int n, int[] cache) {
+    if (cache[n] != -1) {
+        return cache[n];
+    }
+
+    int x = f(n - 1, cache);
+    int y = f(n - 2, cache);
+    cache[n] = x + y;
+    return cache[n];
+}
+```
+```java
+/**
+    * <h3>使用 Memoization(记忆法, 也称备忘录) 改进</h3>
+    */
+public static int fibonacciRecursion2(int n) {
+    int[] cache = new int[n + 1];
+    Arrays.fill(cache, -1); // [-1,-1,-1,-1,-1,-1]
+    return f2(n, cache);
+}
+
+/*
+    * 用递归填满记忆数组: 在边界条件内写初始化条件
+    */
+private static int f2(int n, int[] cache) {
+    if (cache[n] != -1) {
+        return cache[n];
+    }
+
+    // 在边界条件内写初始化条件
+    if (n == 0) {
+        cache[0] = 0;
+        return cache[0];
+    } else if (n == 1) {
+        cache[1] = 1;
+        return cache[1];
+    }
+
+    int x = f2(n - 1, cache);
+    int y = f2(n - 2, cache);
+    cache[n] = x + y;
+    return cache[n];
+}
+```
+## 6. 题
+
+### 6.1. 斐波那契数列
 
 $$
 f(n) = 
@@ -153,13 +227,13 @@ $$
   * 带入递归次数公式 $2*\frac{1}{2.236}*({1.618}^{n+1} - {(-0.618)}^{n+1})-1$
   * 时间复杂度为 $\Theta(1.618^n)$
 
-#### 兔子
+#### 6.1.1. 兔子
 
 ![alt text](../../../../../../../images/image-26.png)
 
 上个月的兔子 + 上个月成熟的兔子生的兔子 = 上个月的兔子 + 上个月成熟的兔子 = 上个月的兔子 + 上上个月的兔子。
 
-#### 爬楼梯
+#### 6.1.2. 爬楼梯
 
 ![alt text](../../../../../../../images/image-27.png)
 
@@ -168,7 +242,7 @@ $$
 因此本质上还是斐波那契数列，只是从其第二项开始f(2)
 
 
-## 汉诺塔
+### 6.2. 汉诺塔
 
 ![alt text](../../../../../../../images/image-29.png)
 
@@ -176,3 +250,27 @@ $$
 - 把 n-1 个盘子，由a,借c,移至b
 - 把最后的盘子， 由a,借b,移至 c
 - 把 n-1 个盘子，由b,借a,移至c
+
+### 6.3. 杨辉三角
+
+斜着看，行 $i$，列 $j$
+```
+1
+1   1
+1   2   1
+1   3   3   1
+1   4   6   4   1
+```
+
+* 递归：
+    
+    当前元素 = 上一行左上角元素 + 上一行上面元素
+
+    $[i][j] = [i-1][j-1] + [i-1][j]$
+* 边界条件：
+    
+    当面没有元素 $a[i-1][j]$ 不存在————对应斜边  $i=j$ 
+    
+    或者左上角没有元素 $a[i-1][j-1]$————对应最左一列 $j=0$ 
+
+    当 $j=0$ 或 $i=j$ 时，$[i][j]$ 取值为 $1$
