--- a/docs/背.md
+++ b/docs/背.md
@@ -2,6 +2,8 @@
   - [1.1. 链表@](#11-链表)
     - [1.1.2. 链表的遍历条件是什么](#112-链表的遍历条件是什么)
     - [1.1.1. 链表的插入和删除需要做什么](#111-链表的插入和删除需要做什么)
+    - [删除结点](#删除结点)
+    - [插入结点](#插入结点)
     - [删除倒数结点](#删除倒数结点)
     - [反转链表的方式](#反转链表的方式)
   - [1.2. 递归@](#12-递归)
@@ -14,14 +16,33 @@
 ---
 # 背
 ## 1.1. 链表@
-
-
 ### 1.1.2. 链表的遍历条件是什么
 
-当前结点不为空
+当前结点不为空。
+
+遍历时直接打印和更新。
+
+无哨兵头直接开始 cur=head，有哨兵从真头开始，cur=head.next。
 ### 1.1.1. 链表的插入和删除需要做什么
 
 找到前一个结点。
+
+### 删除结点
+
+单链表：
+- 删除头结点：判断真头非空 + 更新头 `head=head.next`。
+- 删除下标：
+    
+    通用。找到前一个结点`index-1`，`pre.next = pre.next.next`。临界，index超界，要么是`index-1`本身超界，要么是`index-1`得到尾结点。
+    
+    临界。index=0，对应删除头结点；
+
+### 插入结点
+
+单链表：
+- 插入头结点：不用判空
+  
+    `head = new Node(value, head)` / `head.next = new Node(value, head.next)`
 
 ### 删除倒数结点
 
