--- a/src/main/java/com/itheima/algorithm/recursion/递归.md
+++ b/src/main/java/com/itheima/algorithm/recursion/递归.md
@@ -112,6 +112,21 @@ int f(...) {
 }
 ```
 
+反转链表的递归: 最后一层newHead最后一个节点，head是倒数第二，但是return 为什么返回newHead
+
+```java
+class Solution {
+    public ListNode reverseList(ListNode head) {
+        if (head == null || head.next == null) {
+            return head;
+        }
+        ListNode newHead = reverseList(head.next);
+        head.next.next = head;
+        head.next = null;
+        return newHead;
+    }
+}
+```
 ## 4. 循环变递归
 
 把最外层的循环拆出来。
