--- a/src/main/java/com/itheima/datastructure/linkedlist/链表.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/链表.md
@@ -1,11 +1,3 @@
-可以分类为
-
-* 单向链表：每个元素只知道其下一个元素是谁
-* 双向链表：每个元素知道其上一个元素和下一个元素
-* 循环链表：通常的链表尾节点 tail 指向的都是 null，而循环链表的 tail 指向的是头节点 head
-  * 有两个哨兵
-  * 有一个哨兵
-
 ## 链表的性能
 
 > 性能
@@ -29,3 +21,19 @@
 双向循环链表的单双哨兵：
 - 初始化不一样：一个哨兵两个指针和两个哨兵四个指针。
 - `findNode()`不一样：单哨兵需要特别处理 index = -1，因为 for 循环的退出条件哨兵表示直接退出了。
+
+## 题
+
+- 反转链表 206：pre cur、新链表头插法、递归
+- 根据值删除节点 203：
+- 删除倒数节点19
+- 有序链表去重83
+- 有序链表去重82
+- 合并两个有序链表21
+- 合并多个有序链表23
+- 查找链表中间节点876
+- 判断回文链表234
+- 检测链表是否有环141
+- 检测环的入口142
+- 删除指定节点237
+- 相交链表160
