--- a/src/main/java/com/itheima/algorithm/recursion/递归.md
+++ b/src/main/java/com/itheima/algorithm/recursion/递归.md
@@ -95,35 +95,23 @@ int f(int[] a, int target, ...) {
 
 ## 3. 返回值
 
-```java
-int f(...) {
-    if(i > j){
-        return -1;
-    }
+返回值天生就是倒着的：位于递归后面————尾递归`return f()` 即`int a = f(); return a`
 
-    if (...){
-        // 忘记 return 了
-        return f(...);
-    }else if (...){
-        return f(...);
-    }else{
-        return a[m];
-    }
-}
-```
+本轮的返回值，和本轮中调用下一轮递归的返回值有关。所以设计边界条件，要考虑其返回值的意义。
 
-反转链表的递归: 最后一层newHead最后一个节点，head是倒数第二，但是return 为什么返回newHead
 
+
+反转链表的递归: 返回最后一个节点的位置，层层向上传递最后一个
 ```java
 class Solution {
     public ListNode reverseList(ListNode head) {
         if (head == null || head.next == null) {
             return head;
         }
-        ListNode newHead = reverseList(head.next);
+        ListNode newHead = reverseList(head.next);  // 返回最后一个节点的位置
         head.next.next = head;
         head.next = null;
-        return newHead;
+        return newHead; // 层层向上传递最后一个
     }
 }
 ```
