--- a/src/main/java/com/itheima/datastructure/linkedlist/leetcode/203根据val移除链表元素.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/leetcode/203根据val移除链表元素.md
@@ -43,33 +43,22 @@ class Solution {
 
 ## 递归
 
-- 当前是val，则返回下一个节点
-- 不是，返回当前节点。因为可能会去掉后面的节点，但还要让当前节点关联到下一次递归。
+- 不是：让当前节点关联到下一次递归，然返回当前节点。
+- 当前是val：让当前节点关联到下一次递归，跳过当前结点而返回下一个结点（从而，可以直接返回下一次递归）
 
 ```java
 class Solution {
     public ListNode removeElements(ListNode head, int val) {
         if(head == null){
             return null;
-        }        
+        }
+
         if(head.val == val){
+            // head.next = removeElements(head.next, val);
+            // return head.next;
             return removeElements(head.next, val);
         }else{
             head.next = removeElements(head.next, val);
-            return head;
-        }
-    }
-}
-```
-```java
-class Solution {
-    public ListNode removeElements(ListNode head, int val) {
-       if(head==null)
-           return null;
-        head.next=removeElements(head.next,val);
-        if(head.val==val){
-            return head.next;
-        }else{
             return head;
         }
     }
