--- a/src/main/java/com/itheima/datastructure/linkedlist/链表.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/链表.md
@@ -25,12 +25,10 @@
 ## 题
 
 - 反转链表 206：pre cur、新链表头插法、递归
-- 根据值删除节点 203：
+- 根据值删除节点 203：pre cur、递归
 - 删除倒数节点19
-- 有序链表去重83
-- 有序链表去重82
-- 合并两个有序链表21
-- 合并多个有序链表23
+- 有序链表去重82、83：
+- 合并有序链表21、23：数组排序、各链表指针
 - 查找链表中间节点876
 - 判断回文链表234
 - 检测链表是否有环141
