--- a/src/main/java/com/itheima/datastructure/linkedlist/链表.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/链表.md
@@ -22,6 +22,30 @@
 - 初始化不一样：一个哨兵两个指针和两个哨兵四个指针。
 - `findNode()`不一样：单哨兵需要特别处理 index = -1，因为 for 循环的退出条件哨兵表示直接退出了。
 
+
+双指针：
+- 快慢指针：同一处开始，sentinel或head
+- pre cur：pre从sentinel，cur从head
+
+## 快慢指针
+
+1. 获取倒n：
+   
+   从哨兵开始还是从head开始都一样，因为拉开差距的是for，用了哨兵只是多走一次while.
+2. 删除倒n：19
+   
+   那么就要获取前一个节点（加入哨兵，for中n+1拉开更大）
+3. 获取中间：876
+   
+   倒数第一及后，`fast != null && fast.next != null`；倒数第二及后，`fast.next != null && fast.next.next != null`
+
+   从head开始：不能是倒数第二及后，则中间及中间偏左。
+
+   从head开始：不能是倒数第一及后，则中间及中间偏右。
+
+   从哨兵开始：不能是倒数第一及后，则中间及中间偏左。相当于多了一个节点，中间及中间偏右→中间偏左及中间
+
+
 ## 题
 
 - 反转链表 206：pre cur、新链表头插法、递归
@@ -35,3 +59,4 @@
 - 检测环的入口142
 - 删除指定节点237
 - 相交链表160
+
