--- a/src/main/java/com/itheima/datastructure/linkedlist/leetcode/206反转链表.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/leetcode/206反转链表.md
@@ -1,5 +1,6 @@
 ## pre cur
-- 因为不删除，所以`prev = cur;`来更新
+- 因为不删除，所以`prev = cur;`来更新，就也不需要哨兵。
+- 也不能要哨兵，不然链表尾部多一个。
 ```java
 public ListNode reverseList(ListNode head) {
     ListNode prev = null;
@@ -7,6 +8,7 @@ public ListNode reverseList(ListNode head) {
     while (cur != null) {
         ListNode next = cur.next;
         cur.next = prev;
+        // 更新pre和cur
         prev = cur;
         cur = next;
     }
