--- a/src/main/java/com/itheima/datastructure/linkedlist/leetcode/234判断回文链表.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/leetcode/234判断回文链表.md
@@ -1,27 +1,80 @@
-## O(n),O(1)解
 
+## 反转后半链表
+O(n),O(1)解
+
+- 获取中间和中间偏左）→整体next→中间的右边和中间。
+- 反转的后半链表。
+- 循环，一一比较头链表和后半链表。
+```java
+class Solution {
+    public boolean isPalindrome(ListNode head) {
+        if(head == null || head.next == null){
+            return true;
+        }
+        ListNode middle = getMiddle(head);
+        ListNode newHead = reverseList(middle);
+        while(newHead!=null){
+            if(newHead.val != head.val){
+                return false;
+            }
+            newHead = newHead.next;
+            head = head.next;
+        }
+        return true;
+    }
+
+    public ListNode reverseList(ListNode head){
+        ListNode pre = null;
+        ListNode cur = head;
+        while(cur!=null){
+            ListNode next = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = next;
+        }
+        return pre;
+    }
+
+    public ListNode getMiddle(ListNode head){
+        ListNode slow = head;
+        ListNode fast = head;
+        while(fast!=null && fast.next != null){
+            fast = fast.next.next;
+            slow = slow.next;
+        }
+        return slow;
+    }
+}
+```
+## 反转前半链表
+O(n),O(1)解
+
+
+获取中间结点的同时+反转链表
 - 通过快慢指针找到中间和中间偏右的节点。
 - 在快慢指针中，得到反转的前半部分链表p
-- 让slow是中间偏右。
+- 让slow是中间的右边、保持中间偏右。
 - 循环，一一比较p链表和slow链表。
 
 ```java
 class Solution {
     public boolean isPalindrome(ListNode head) {
-        ListNode slow = head;
         ListNode fast = head;
-        ListNode p = null; // 反转链表的头节点
+        ListNode slow = head;   // 既是快慢指针的慢，也是pre cur的cur
+        ListNode pre = null;
         while (fast != null && fast.next != null) {
             fast = fast.next.next;
             // 反转
+            // 最终 slow是中间和中间偏右，pre慢一步是中间的前一个和中间偏左。
             ListNode next = slow.next;
-            slow.next = p;
-            p = slow;
-
-            slow = next; // p右边是slow，slow是中间和中间偏右
+            slow.next = pre;
+            pre = slow;
+            slow = next;    // 既是慢指针更新，又是cur更新
         }
 
-        if (fast != null) { // 中间, fast.next == null还得判断fast存在
+        // slow是中间，需要调整，中间不判断
+        // fast.next == null还得判断fast存在
+        if (fast != null) { 
             slow = slow.next;
         }
 
@@ -33,6 +86,58 @@ class Solution {
             p = p.next;
         }
         return true;
+    }
+}
+```
+
+## 递归
+看看传统递归和DFS式的递归，【待理解】
+```java
+class Solution {
+    private ListNode frontPointer;
+
+    private boolean recursivelyCheck(ListNode currentNode) {
+        if (currentNode != null) {
+            if (!recursivelyCheck(currentNode.next)) {
+                return false;
+            }
+            if (currentNode.val != frontPointer.val) {
+                return false;
+            }
+            frontPointer = frontPointer.next;
+        }
+        return true;
+    }
+
+    public boolean isPalindrome(ListNode head) {
+        frontPointer = head;
+        return recursivelyCheck(head);
+    }
+}
+```
+```java
+class Solution {
+    private ListNode frontPointer;
+
+    private boolean recursivelyCheck(ListNode currentNode) {
+        if (currentNode == null) {
+            return true;
+        }
+        boolean nextState = recursivelyCheck(currentNode.next);
+        if (!nextState) {
+            return false;
+        }
+        if (currentNode.val != frontPointer.val) {
+            return false;
+        }else{
+            frontPointer = frontPointer.next;
+            return true;
+        }
+    }
+
+    public boolean isPalindrome(ListNode head) {
+        frontPointer = head;
+        return recursivelyCheck(head);
     }
 }
 ```
