--- a/src/main/java/com/itheima/datastructure/linkedlist/链表.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/链表.md
@@ -43,8 +43,14 @@
 
    从head开始：不能是倒数第一及后，则中间及中间偏右。
 
-   从哨兵开始：不能是倒数第一及后，则中间及中间偏左。相当于多了一个节点，中间及中间偏右→中间偏左及中间
+   从哨兵开始：不能是倒数第一及后，则中间及中间偏左。相当于多了一个节点，中间及中间偏右→中间偏左及中间。
 
+   PS：我们可以通过判断循环结束后的`fast/fast.next`来确定链表是奇数还是偶数。
+
+## pre cur
+
+1. 反转链表
+2. 根据val移除链表元素、删除排序重复
 
 ## 题
 
