--- a/docs/图/算法.md
+++ b/docs/图/算法.md
@@ -1,1 +1,6 @@
-Dijkstra 算法解决的是**带权最短路径问题**，而我们这里关注的是**无权最短路径问题**。也可以看成每条边的权重都是 1。这样的最短路径问题，用 BFS 求解就行了。
+
+---
+https://leetcode.cn/problems/binary-tree-level-order-traversal/solutions/244853/bfs-de-shi-yong-chang-jing-zong-jie-ceng-xu-bian-l/
+
+## Dijkstra
+Dijkstra 算法解决的是**带权最短路径问题**，而**无权最短路径问题** 用 BFS 求解就行了。
