--- a/src/main/java/com/itheima/datastructure/linkedlist/leetcode/链表有无环.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/leetcode/链表有无环.md
@@ -32,30 +32,27 @@ public class Solution {
 public class Solution {
     public ListNode detectCycle(ListNode head) {
         ListNode slow = head, fast = head;
-        while(fast!=null && fast.next != null){
+        while (fast != null && fast.next != null) {
             fast = fast.next.next;
             slow = slow.next;
-            if(fast == slow){
-                break;
+            if (slow == fast) {
+                while (slow != head) {
+                    slow = slow.next;
+                    head = head.next;
+                }
+                return slow;
             }
         }
-        // fast和slow未相遇：根据fast
-        if(fast ==null || fast.next == null){
-            return null;
-        }
-        while(head != slow){
-            if(head == slow){
-                break;
-            }
-            head = head.next;
-            slow = slow.next;
-        }
-        return slow;
+        // 空、只有一个节点
+        return null;
     }
 }
 ```
 
+> 过程
+
 1. fast和slow未相遇：无环
+   
 2. fast和slow相遇：有环。
     
     slow走s步，fast走f步，f=2s。
