--- a/docs/树/层序遍历.md
+++ b/docs/树/层序遍历.md
@@ -1,12 +1,36 @@
-- [1. Introduction](#1-introduction)
-- [2. version](#2-version)
-  - [2.1. 入队时](#21-入队时)
-  - [2.2. 出队时](#22-出队时)
+- [1. 不分曾结果](#1-不分曾结果)
+- [2. 分层结果](#2-分层结果)
+  - [2.1. 入队时的错位](#21-入队时的错位)
+  - [2.2. 🚀出队时记录](#22-出队时记录)
 
 
 ---
 
-# 1. Introduction
+https://leetcode.cn/problems/binary-tree-level-order-traversal/solutions/244853/bfs-de-shi-yong-chang-jing-zong-jie-ceng-xu-bian-l/
+
+
+## 1. 不分曾结果
+出队时打印。
+```java
+List<Integer> result = new ArrayList<>();
+Queue<TreeNode> q = new ArrayDeque<>();
+if(root != null){
+    q.offer(root);
+}
+while(!q.isEmpty()){
+    TreeNode cur = q.poll();
+    result.add(cur.val);
+
+    if(cur.left != null){
+        q.offer(cur.left);
+    }
+    if(cur.right != null){
+        q.offer(cur.right);
+    }
+}
+return result;
+```
+## 2. 分层结果
 
 层序遍历顺序和 BFS 是一样的，我们可以直接用 BFS 得出层序遍历结果。然而，层序遍历要求的输入结果和 BFS 是不同的。层序遍历要求我们区分每一层，也就是返回一个二维数组。而 BFS 的遍历结果是一个一维数组，无法区分每一层。
 
@@ -29,83 +53,104 @@
 ![94cd1fa999df0276f1dae77a9cca83f4cabda9e2e0b8571cd9550a8ee3545f56](../../images/94cd1fa999df0276f1dae77a9cca83f4cabda9e2e0b8571cd9550a8ee3545f56.gif)
 
 
-# 2. version
-## 2.1. 入队时
-
+### 2.1. 入队时的错位
+遍历弹出当前层，入队下一层的结点、记录下一层结点的值：
+- 根结点要特意写记录。
+- 左右子结点也要分开写记录。
+- 会出现最后一层叶子结点时，for循环里左右子结点都是空，从而level就是[]的情况，所以最后要判断level.size，要不然就会出现`[[3],[9,20],[15,7],[]]`，多了一个`[]`。
 
 ```cpp
 class Solution {
-public:
-    vector<vector<int>> levelOrder(TreeNode* root) {
-        vector<vector<int>> res;
-        queue<TreeNode*> q;
-        if (root){
-            q.emplace(root);
-            vector<int> level;
-            level.emplace_back(root->val);
-            res.emplace_back(level);
+    public List<List<Integer>> levelOrder(TreeNode root) {
+        List<List<Integer>> result = new ArrayList<>();
+        Queue<TreeNode> q = new ArrayDeque<>();
+        if(root != null){
+            q.offer(root);
+            List<Integer> level = new ArrayList<>();
+            level.add(root.val);
+            result.offer(level);
         }
-        while(!q.empty()){
+        while(!q.isEmpty()){
             int n = q.size();
-            vector<int> level;
+            List<Integer> level = new ArrayList<>();
             for(int i = 0 ; i < n; i++){
-                TreeNode* cur = q.front();
-                q.pop();
-
-                if(cur->left){
-                    q.emplace(cur->left);
-                    level.emplace_back(cur->left->val);
+                TreeNode cur = q.poll();
+                
+                if(cur.left != null){
+                    q.offer(cur.left);
+                    level.add(cur.left.val);
                 }
-
-                if(cur->right){
-                    q.emplace(cur->right);
-                    level.emplace_back(cur->right->val);
+                if(cur.right != null){
+                    q.offer(cur.right);
+                    level.add(cur.right.val);
                 }
             }
-            if(level.size() != 0){
-                res.emplace_back(level);
-            }
+            if(!level.isEmpty())
+                result.add(level);
         }
-        return res;
+        return result;
     }
-};
+}
 ```
-将要加入的结点放入level里：
-麻烦。根结点要特意写，左右子结点也要写。
-- 但是会出现最后一层叶子结点时，for循环里左右子结点都是空，从而level就是[]的情况，所以最后要判断level.size，要不然就会出现`[[3],[9,20],[15,7],[]]`，多了一个`[]`。
-- 奇效是可以判断用if(cur->left)来判断叶子结点的null孩子。
 
-## 2.2. 出队时
+### 2.2. 🚀出队时记录
+遍历弹出当前层、记录弹出的结点值，入队下一层的结点：
+- 注意到`c1`和`c2`与队列的关系，可以简化。
+- 简单。根节点不用特殊处理，下一层的结点也不用特殊记录、不会出现最后一层为空的情况。
 ```cpp
+// class Solution {
+//     public List<List<Integer>> levelOrder(TreeNode root) {
+//         List<List<Integer>> result = new ArrayList<>();
+//         Queue<TreeNode> q = new ArrayDeque<>();
+//         if(root != null){
+//             q.offer(root);
+//         }
+//         int c1 = 1;
+//         while(!q.isEmpty()){
+//             List<Integer> result2 = new ArrayList<>();
+//             int c2 = 0;
+//             for(int i = 0 ; i < c1; i++){
+//                 TreeNode p = q.poll();
+//                 result2.add(p.val);
+//                 if(p.left != null){
+//                     q.offer(p.left);
+//                     c2++;
+//                 }
+//                 if(p.right != null){
+//                     q.offer(p.right);
+//                     c2++;
+//                 }
+//             }
+//             c1 = c2;
+//             result.add(result2);
+//         }
+//         return result;
+//     }
+// }
 class Solution {
-public:
-    vector<vector<int>> levelOrder(TreeNode* root) {
-        vector<vector<int>> res;
-        queue<TreeNode*> q;
-        if (root){
-            q.emplace(root);
+    public List<List<Integer>> levelOrder(TreeNode root) {
+        List<List<Integer>> result = new ArrayList<>();
+        Queue<TreeNode> q = new ArrayDeque<>();
+        if(root != null){
+            q.offer(root);
         }
-        while(!q.empty()){
+        while(!q.isEmpty()){
             int n = q.size();
-            vector<int> level;
+            List<Integer> level = new ArrayList<>();
             for(int i = 0 ; i < n; i++){
-                TreeNode* cur = q.front();
-                q.pop();
-                level.emplace_back(cur->val);
-
-                if(cur->left){
-                    q.emplace(cur->left);
+                TreeNode cur = q.poll();
+                level.add(cur.val);
+                
+                if(cur.left != null){
+                    q.offer(cur.left);
                 }
-                if(cur->right){
-                    q.emplace(cur->right);
+                if(cur.right != null){
+                    q.offer(cur.right);
                 }
             }
-            res.emplace_back(level);
+            result.add(level);
         }
-        return res;
+        return result;
     }
-};
+}
 ```
-出完这层后，我们才把结点加入res：
-- 简单。
-- 这样最后一层就不会出现为空的情况。
