--- a/src/main/java/com/itheima/datastructure/stack/leetcode/前中后缀表达式.md
+++ b/src/main/java/com/itheima/datastructure/stack/leetcode/前中后缀表达式.md
@@ -1,4 +1,13 @@
+## 后缀表达式150
 
+只处理 +-*/，后缀表达式没有括号。
+
+规则：
+- 操作数栈。
+- 读取到数，入栈；读取到运算符，弹两个，结果入栈。
+
+
+注意：
 - 注意`!t.equals("+")`而不是`t != "+"`，这是String
 - 后弹者运算先弹者的顺序！
 ```java
@@ -34,4 +43,20 @@ class Solution {
         return s.pop();
     }
 }
+```
+## 中缀表达式
+
+就是人写的表达式，要转化为后缀表达式来处理。处理的过程中会消除掉括号。
+
+过程：
+- 两个栈，一个操作数栈，一个运算符栈。
+- 读取到操作数，入栈
+- 读取到运算符：
+  - 优先级从低到高是`(`,`+-`,`*/`。栈里的运算符优先级都必须自顶向下逐个减小（不能相等）
+  - 读取到`(`，直接入栈（不管优先级规则）
+  - 读取到`)`，弹出到`(`也出栈。
+  - 读取到`+-`,`*/`。空栈直接入；读取到的，如果比栈顶高，入栈；如果比栈顶小，栈顶依次弹出直到比它小或空栈了，再入栈。
+
+```java
+
 ```
