--- a/src/main/java/com/itheima/datastructure/stack/leetcode/前中后缀表达式.md
+++ b/src/main/java/com/itheima/datastructure/stack/leetcode/前中后缀表达式.md
@@ -1,3 +1,47 @@
+## 字符串数字匹配
+- null
+- 空串
+- `-1`负数
+
+```java
+// 性能损耗
+public boolean isNum(String token){
+    try{
+        stackNum.push(Integer.parseInt(token));
+        return true;
+    }
+    catch(Exception e){
+        return false;
+    }
+}
+```
+```java
+// 好！
+public boolean isNum(String token) {
+    return token != null && token.length() > 0 && token.matches("-?\\d+(\\.\\d+)?");
+}
+```
+```java
+// 手动正则
+public boolean isNum(String token) {
+    int n = token.length();
+    if (token == null || n == 0) {
+        return false;
+    }
+    char[] chars = token.toCharArray();
+    if(chars[0] == '-' && n > 1){
+        return true;
+    }
+    for (int i = 0; i < n; i++) {
+        // !Character.isDigit(chars[i])
+        if (chars[i] < '0' || chars[i] > '9') {
+            return false;
+        }
+    }
+    return true;
+}
+```
+
 ## 后缀表达式150
 
 只处理 +-*/，后缀表达式没有括号。
