--- a/docs/树/层序遍历.md
+++ b/docs/树/层序遍历.md
@@ -2,6 +2,7 @@
 - [2. 分层结果](#2-分层结果)
   - [2.1. 入队时的错位](#21-入队时的错位)
   - [2.2. 🚀出队时记录](#22-出队时记录)
+- [锯齿形层序遍历](#锯齿形层序遍历)
 
 
 ---
@@ -151,6 +152,44 @@ class Solution {
             result.add(level);
         }
         return result;
+    }
+}
+```
+## 锯齿形层序遍历
+- 变动的是记录每层int值的level，每层的结果添加时是栈还是队列。
+- 而不是变动如何添加左右子树。
+```java
+class Solution {
+    public List<List<Integer>> zigzagLevelOrder(TreeNode root) {
+        List<List<Integer>> res = new ArrayList<>();
+        LinkedList<TreeNode> q = new LinkedList<>();
+
+        if (root != null) {
+            q.add(root);
+        }
+        boolean isReversed = false;
+        while (!q.isEmpty()) {
+            LinkedList<Integer> level = new LinkedList<>();
+            int n = q.size();
+            for (int i = 0; i < n; i++) {
+                TreeNode cur = q.pop();
+                // 变动level是add和push。
+                if (!isReversed) {
+                    level.add(cur.val);
+                } else {
+                    level.push(cur.val);
+                }
+                if (cur.left != null) {
+                    q.add(cur.left);
+                }
+                if (cur.right != null) {
+                    q.add(cur.right);
+                }
+            }
+            isReversed = !isReversed;
+            res.add(level);
+        }
+        return res;
     }
 }
 ```
