--- a/src/main/java/com/itheima/datastructure/stack/leetcode/前中后缀表达式.md
+++ b/src/main/java/com/itheima/datastructure/stack/leetcode/前中后缀表达式.md
@@ -1,4 +1,14 @@
-## 字符串数字匹配
+- [1. 字符串数字匹配](#1-字符串数字匹配)
+- [2. 后缀表达式150](#2-后缀表达式150)
+- [3. 中缀表达式](#3-中缀表达式)
+  - [弱化版：224](#弱化版224)
+  - [弱化版：227](#弱化版227)
+
+
+---
+## 1. 字符串数字匹配
+
+https://blog.csdn.net/mryang125/article/details/113146057
 - null
 - 空串
 - `-1`负数
@@ -7,7 +17,7 @@
 // 性能损耗
 public boolean isNum(String token){
     try{
-        stackNum.push(Integer.parseInt(token));
+        Integer.parseInt(token);
         return true;
     }
     catch(Exception e){
@@ -42,7 +52,7 @@ public boolean isNum(String token) {
 }
 ```
 
-## 后缀表达式150
+## 2. 后缀表达式150
 
 只处理 +-*/，后缀表达式没有括号。
 
@@ -50,57 +60,283 @@ public boolean isNum(String token) {
 - 操作数栈。
 - 读取到数，入栈；读取到运算符，弹两个，结果入栈。
 
-
 注意：
-- 注意`!t.equals("+")`而不是`t != "+"`，这是String
 - 后弹者运算先弹者的顺序！
+- 如果有必要，栈中先存0，以防`2-`这种情况。
 ```java
 class Solution {
     public int evalRPN(String[] tokens) {
-        Stack<Integer> s = new Stack<>();
-        for (String t : tokens) {
-            if (!t.equals("+") && !t.equals("-") && !t.equals("*") && !t.equals("/")) {
-                s.push(Integer.valueOf(t));
+        LinkedList<Integer> stackNum = new LinkedList<>();
+        // stackNum.push(0);
+        for (String token : tokens) {
+            if (isNum(token)) {
+                stackNum.push(Integer.valueOf(token));
             } else {
                 // 后弹者运算先弹者
-                int b = s.pop();
-                int a = s.pop();
-                int c = -1;
-                switch (t) {
-                    case "+":
-                        c = a + b;
+                Integer b = stackNum.poll();
+                Integer a = stackNum.poll();
+                switch (token) {
+                    case "+": {
+                        stackNum.push(a + b);
                         break;
-                    case "-":
-                        c = a - b;
+                    }
+                    case "-": {
+                        stackNum.push(a - b);
                         break;
-                    case "*":
-                        c = a * b;
+                    }
+                    case "*": {
+                        stackNum.push(a * b);
                         break;
-                    case "/":
-                        c = a / b;
+                    }
+                    case "/": {
+                        stackNum.push(a / b);
                         break;
-
+                    }
                 }
-                s.push(c);
             }
         }
-        return s.pop();
+        return stackNum.poll();
+    }
+
+    public boolean isNum(String token) {
+        return token != null && token.length() != 0 && token.matches("-?\\d+(\\.\\d+)?");
     }
 }
 ```
-## 中缀表达式
+↓
+```java
+// switch的default匹配数字情况，从而省去判断是否是数字
+class Solution {
+    public int evalRPN(String[] tokens) {
+        LinkedList<Integer> stackNum = new LinkedList<>();
+        for (String token : tokens) {
+            switch (token) {
+                case "+": {
+                    Integer b = stackNum.poll();
+                    Integer a = stackNum.poll();
+                    stackNum.push(a + b);
+                    break;
+                }
+                case "-": {
+                    Integer b = stackNum.poll();
+                    Integer a = stackNum.poll();
+                    stackNum.push(a - b);
+                    break;
+                }
+                case "*": {
+                    Integer b = stackNum.poll();
+                    Integer a = stackNum.poll();
+                    stackNum.push(a * b);
+                    break;
+                }
+                case "/": {
+                    Integer b = stackNum.poll();
+                    Integer a = stackNum.poll();
+                    stackNum.push(a / b);
+                    break;
+                }
+                default: {
+                    stackNum.push(Integer.valueOf(token));
+                    break;
+                }
+            }
+        }
+        return stackNum.poll();
+    }
+}
+```
+↓
+```java
+// 数组栈
+// 对于一个有效的逆波兰表达式，其长度 n 一定是奇数，
+// 且操作数的个数一定比运算符的个数多 1 个，即包含 (n+1)/2个操作数和 (n-1)/2 个运算符
+class Solution {
+    public int evalRPN(String[] tokens) {
+        int n = tokens.length;
+        int[] stackNum = new int[(n + 1) / 2];
+        int index = 0;
+        for (String token : tokens) {
+            switch (token) {
+                case "+": {
+                    stackNum[index-2] = stackNum[index-2] + stackNum[index - 1];
+                    index--;
+                    break;
+                }
+                case "-": {
+                    stackNum[index-2] = stackNum[index-2] - stackNum[index - 1];
+                    index--;
+                    break;
+                }
+                case "*": {
+                    stackNum[index-2] = stackNum[index-2] * stackNum[index - 1];
+                    index--;
+                    break;
+                }
+                case "/": {
+                    stackNum[index-2] = stackNum[index-2] / stackNum[index - 1];
+                    index--;
+                    break;
+                }
+                default: {
+                    stackNum[index++] = Integer.parseInt(token);
+                    break;
+                }
+            }
+        }
+        return stackNum[index-1];
+    }
+}
+```
+## 3. 中缀表达式
 
 就是人写的表达式，要转化为后缀表达式来处理。处理的过程中会消除掉括号。
 
 过程：
 - 两个栈，一个操作数栈，一个运算符栈。
-- 读取到操作数，入栈
 - 读取到运算符：
   - 优先级从低到高是`(`,`+-`,`*/`。栈里的运算符优先级都必须自顶向下逐个减小（不能相等）
   - 读取到`(`，直接入栈（不管优先级规则）
   - 读取到`)`，弹出到`(`也出栈。
-  - 读取到`+-`,`*/`。空栈直接入；读取到的，如果比栈顶高，入栈；如果比栈顶小，栈顶依次弹出直到比它小或空栈了，再入栈。
+  - 读取到`+-`,`*/`。空栈和当前比栈顶高，入栈；如果比栈顶小，栈顶依次弹出直到比它小或空栈了，再入栈。
+- 读取到操作数，入栈
+
+
+特殊情况：
+- `"1-(     -2)"`：过滤空格，并`(-`变成`(0-`
+- `"- (3 + (4 + 5))"`: 后缀表达式的栈里预先存0
 
 ```java
+class Solution {
 
+    public String[] splitString(String s) {
+        // "1-(     -2)"，所以不能用 chars[i - 1] == '(' 来处理
+        s = s.replaceAll(" ", "");
+        s = s.replaceAll("\\(-", "(0-");
+        List<String> tokens = new LinkedList<>();
+        char[] chars = s.toCharArray();
+        int n = s.length();
+        StringBuilder keepNum = new StringBuilder();
+        for (int i = 0; i < n; i++) {
+            if (chars[i] == '(' || chars[i] == ')' || chars[i] == '+' || chars[i] == '*' || chars[i] == '/') {
+                tokens.add(chars[i] + "");
+            } else if (Character.isDigit(chars[i])) {
+                if (i == n - 1 || !Character.isDigit(chars[i + 1])) {
+                    keepNum.append(chars[i]);
+                    tokens.add(keepNum.toString());
+                    keepNum.setLength(0);
+                } else {
+                    keepNum.append(chars[i]);
+                }
+            } else {
+                // 最后一个字符，这种情况本身就是错的，不处理
+                if (Character.isDigit(chars[i + 1]) && (i == 0 || i != 0 && chars[i - 1] == '(')) {
+                    keepNum.append("-");
+                } else {
+                    tokens.add("-");
+                }
+            }
+        }
+        // System.out.println(tokens);
+        return tokens.toArray(new String[0]);
+    }
+
+    public int calculate(String s) {
+        String[] infix = splitString(s);
+        Map<String, Integer> m = new HashMap<>() {
+            {
+                put("(", 0);
+                put("+", 1);
+                put("-", 1);
+                put("*", 2);
+                put("/", 2);
+            }
+        };
+
+        List<String> suffix = new LinkedList<>();
+        LinkedList<String> stackSymbol = new LinkedList<>();
+
+        for (String token : infix) {
+            switch (token) {
+                case "(": {
+                    stackSymbol.push(token);
+                    break;
+                }
+                case ")": {
+                    while (!stackSymbol.isEmpty()) {
+                        String top = stackSymbol.poll();
+                        if (top.equals("(")) {
+                            break;
+                        }
+                        suffix.add(top); // 写在下面，'('不记录
+                    }
+                    break;
+                }
+                case "+", "-", "*", "/": {
+                    // System.out.println(token + " " + stackSymbol.peek());
+                    if (stackSymbol.isEmpty() || m.get(token) > m.get(stackSymbol.peek())) {
+                        stackSymbol.push(token);
+                    } else {
+                        while (!stackSymbol.isEmpty()) {
+                            String top = stackSymbol.poll();
+                            suffix.add(top);
+                            if (stackSymbol.isEmpty() || m.get(token) > m.get(stackSymbol.peek())) {
+                                stackSymbol.push(token);
+                                break;
+                            }
+                        }
+                    }
+                    break;
+                }
+                default: {
+                    suffix.add(token);
+                    break;
+                }
+            }
+        }
+        while (!stackSymbol.isEmpty()) {
+            suffix.add(stackSymbol.poll());
+        }
+        // System.out.println(suffix);
+        return evalRPN(suffix.toArray(new String[0]));
+    }
+
+    public int evalRPN(String[] tokens) {
+        int n = tokens.length;
+        int[] stackNum = new int[(n + 1) / 2];
+        int index = 0;
+        for (String token : tokens) {
+            switch (token) {
+                case "+": {
+                    stackNum[index-2] = stackNum[index-2] + stackNum[index - 1];
+                    index--;
+                    break;
+                }
+                case "-": {
+                    stackNum[index-2] = stackNum[index-2] - stackNum[index - 1];
+                    index--;
+                    break;
+                }
+                case "*": {
+                    stackNum[index-2] = stackNum[index-2] * stackNum[index - 1];
+                    index--;
+                    break;
+                }
+                case "/": {
+                    stackNum[index-2] = stackNum[index-2] / stackNum[index - 1];
+                    index--;
+                    break;
+                }
+                default: {
+                    stackNum[index++] = Integer.parseInt(token);
+                    break;
+                }
+            }
+        }
+        return stackNum[index-1];
+    }
+}
 ```
+
+### 弱化版：224
+
+### 弱化版：227
