--- a/src/main/java/com/itheima/datastructure/heap/1.md
+++ b/src/main/java/com/itheima/datastructure/heap/1.md
@@ -1,8 +1,37 @@
-![alt text](../../../../../../../images/image.png)
+## 堆
+
+根据 root 根节点来命名：
+* 在大顶堆中，任意节点 C 与它的父节点 P 符合 $P.value \geq C.value$
+* 而小顶堆中，任意节点 C 与它的父节点 P 符合 $P.value \leq C.value$
+
+特征：
+* 如果从索引 0 开始存储节点数据
+  * 节点 $i$ 的父节点为 $floor((i-1)/2)$
+  * 节点 $i$ 的左子节点为 $2i+1$，右子节点为 $2i+2$
+* 如果从索引 1 开始存储节点数据
+  * 节点 $i$ 的父节点为 $floor(i/2)$
+  * 节点 $i$ 的左子节点为 $2i$，右子节点为 $2i+1$
+
+二叉树：
+* 一棵满二叉树节点个数为 $2^h-1$，如下例中高度（层数） $h=3$ 节点数是 $2^3-1=7$
+* 非叶子节点范围为 $[0, size/2-1]$
+
 
 ## 出最大
 
-    1. 入堆新元素, 加入到数组末尾 (索引位置 child)
-    2. 不断比较新加元素与它父节点(parent)优先级 (上浮)
-        - 如果父节点优先级低, 则向下移动, 并找到下一个 parent
-        - 直至父节点优先级更高或 child==0 为止
+1. 入堆新元素, 加入到数组末尾 (索引位置 child)
+2. 不断比较新加元素与它父节点(parent)优先级 (上浮)
+    - 如果父节点优先级低, 则向下移动, 并找到下一个 parent
+    - 直至父节点优先级更高或 child==0 为止
+
+## 建堆
+
+> 威廉姆斯算法
+
+$n*\log n$。n次循环 * logn的插入排序
+
+> Floyd
+
+需要交换$2^h -h -1$次
+
+其中 $2^h \approx n$，$h \approx \log_2{n}$，因此有时间复杂度 $O(n)$
