--- a/src/main/java/com/itheima/datastructure/binarytree/深度遍历.md
+++ b/src/main/java/com/itheima/datastructure/binarytree/深度遍历.md
@@ -52,3 +52,25 @@ class Solution {
     }
 }
 ```
+```java
+class Solution {
+    public List<Integer> inorderTraversal(TreeNode root) {
+        List<Integer> res = new LinkedList<>();
+
+        TreeNode cur = root;
+        LinkedList<TreeNode> stack = new LinkedList<>();
+        while(cur!= null || !stack.isEmpty()){
+            if(cur != null){
+                stack.push(cur);
+                list.add(cur.val);              // <<<<<<<< 前
+                cur = cur.left;
+            }else{
+                TreeNode pop = stack.pop();
+                res.add(pop.val);       // <<<<<<<< 中
+                cur = pop.right;
+            }
+        }
+        return res;
+    }
+}
+```
