--- a/docs/背.md
+++ b/docs/背.md
@@ -1,4 +1,10 @@
 - [背](#背)
+  - [二分查找](#二分查找)
+    - [target在两边还是中间](#target在两边还是中间)
+    - [基础版和改动版的哪三个](#基础版和改动版的哪三个)
+    - [基础版的复杂度](#基础版的复杂度)
+    - [leftmost和rightmost的标准版返回什么，找打了怎么办](#leftmost和rightmost的标准版返回什么找打了怎么办)
+    - [leftmost和rightmost的替身版返回什么、谁是大于等于小于等于](#leftmost和rightmost的替身版返回什么谁是大于等于小于等于)
   - [1.1. 链表@](#11-链表)
     - [1.1.2. 链表的遍历条件是什么](#112-链表的遍历条件是什么)
     - [1.1.1. 链表的插入和删除需要做什么](#111-链表的插入和删除需要做什么)
@@ -15,6 +21,14 @@
 
 ---
 # 背
+## 二分查找
+
+### target在两边还是中间
+### 基础版和改动版的哪三个
+### 基础版的复杂度
+### leftmost和rightmost的标准版返回什么，找打了怎么办
+### leftmost和rightmost的替身版返回什么、谁是大于等于小于等于
+
 ## 1.1. 链表@
 ### 1.1.2. 链表的遍历条件是什么
 
