--- a/src/main/java/com/itheima/algorithm/binarysearch/二分查找.md
+++ b/src/main/java/com/itheima/algorithm/binarysearch/二分查找.md
@@ -2,26 +2,38 @@
   - [1.1. （重要）基础版：ij都查](#11-重要基础版ij都查)
   - [1.2. 改动版：查i不查j](#12-改动版查i不查j)
   - [1.3. 平衡版：查i不查j的平衡](#13-平衡版查i不查j的平衡)
-  - [1.4. （重要）Leftmost 与 Rightmost](#14-重要leftmost-与-rightmost)
-  - [1.5. （重要）Leftmost 与 Rightmost 的更有用版](#15-重要leftmost-与-rightmost-的更有用版)
-  - [递归版](#递归版)
+  - [1.4. （重要）Leftmost 与 Rightmost的标准版](#14-重要leftmost-与-rightmost的标准版)
+  - [1.5. （重要）Leftmost 与 Rightmost 的替身版](#15-重要leftmost-与-rightmost-的替身版)
+  - [1.6. 递归版](#16-递归版)
 
 ---
 ## 1. 二分查找
 
-> 性能
+target < a[m] < target，target在两边。
 
-- 前两种方法：
+1. 基础版和改动版：区别就是左闭右闭、左闭右开。
+
+     - j = n -1 , j = n
+     - while(i<=j), while(i<j)
+     - j = m- 1, j = m
+
+2. 基础版的复杂度
 
     时间复杂度
-
     * 最坏情况：$O(\log n)$
     * 最好情况：如果待查找元素恰好在数组中央，只需要循环一次 $O(1)$
-
+    
     空间复杂度
-
     * 需要常数个指针 $i,j,m$，因此额外占用的空间是 $O(1)$ 
 
+3. leftmost和rightmost的标准版：找不到返回-1
+
+    - leftmost: 找到了往左移， j = m - 1
+    - rightmost: 找到了往右移， i = m + 1
+4. leftmost和rightmost的替身版：找不到返回替身
+
+    - leftmost：大于等于的最左 `target <= a[m]`, i
+    - rightmost：小于等于的最右 `a[m] <= target`，i-1
 
 ### 1.1. （重要）基础版：ij都查 
 
@@ -125,7 +137,7 @@ value: 2 12 18 23 45 54 65
 - 但是如果待查找元素恰好在数组中央，就不像原来只需要循环一次，而是要循环到只剩一个元素。
 - 时间复杂度就没有最好最坏，都是查到只剩一个元素： $\Theta(log(n))$
 
-### 1.4. （重要）Leftmost 与 Rightmost
+### 1.4. （重要）Leftmost 与 Rightmost的标准版
 
 返回的是最左侧的重复元素 / 返回的是最右侧的重复元素，没找到则返回-1.
 
@@ -171,9 +183,9 @@ leftmost：本来中间索引m处找到了，但是还往左找（移动j向左 
     value: 18 19
     ```
 
-### 1.5. （重要）Leftmost 与 Rightmost 的更有用版
+### 1.5. （重要）Leftmost 与 Rightmost 的替身版
 
-对于 Leftmost 与 Rightmost，可以返回一个比 -1 更有用的值
+对于 Leftmost 与 Rightmost，可以返回一个比 -1 更有用的值，索引。
 
 1. 简化：不用记录`candidate`，则直接去掉`candidate = m; // 记录候选位置`这一行。剩下`i = m + 1;`可以合并到上面的if-else中。
 2. return 返回的含义变化：leftmost 找到大于等于目标的最左元素 `return i`，rightmost 找到小于等于目标的最右元素 `return i-1`
@@ -238,6 +250,6 @@ value: 12 18 18 23
 
 * 前任和后任距离更近者
 
-### 递归版
+### 1.6. 递归版
 
 拆解 while 循环。
